Add xml-jaxb extension back to management extension
Fixes #6050

--- a/integration-tests/management/src/main/resources/application.properties
+++ b/integration-tests/management/src/main/resources/application.properties
@@ -15,3 +15,6 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 quarkus.native.monitoring=jmxserver
+
+# Required to update routes via JMX
+camel.main.jmxUpdateRouteEnabled = true
