Register @PropertyInject classes for reflection
Fixes #6016

--- a/integration-test-groups/foundation/bean/src/main/resources/application.properties
+++ b/integration-test-groups/foundation/bean/src/main/resources/application.properties
@@ -17,3 +17,7 @@
 
 # A test value
 my.foo.property = foo
+
+my.injected.property.a = Test @PropertyInject
+my.injected.property.d = Test @PropertyInject Setter Method
+my.injected.property.e = Test @PropertyInject Method Argument
