--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -280,6 +280,11 @@ jobs:
               --fail-at-end \
               -pl "${NATIVE_MODULES[*]}"
           fi
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: integration-tests
       - name: Fail if there are uncommitted changes
         shell: bash
         run: |
@@ -321,6 +326,11 @@ jobs:
             -Dformatter.skip -Dimpsort.skip -Denforcer.skip -Dcamel-quarkus.update-extension-doc-page.skip \
             --fail-at-end \
             test
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: extensions-core
       - name: cd extensions && mvn test
         run: |
           cd extensions
@@ -328,6 +338,11 @@ jobs:
             -Dformatter.skip -Dimpsort.skip -Denforcer.skip -Dcamel-quarkus.update-extension-doc-page.skip \
             --fail-at-end \
             test
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: extensions
       - name: cd test-framework && mvn test
         run: |
           cd test-framework
@@ -335,6 +350,11 @@ jobs:
             -Dformatter.skip -Dimpsort.skip -Denforcer.skip -Dcamel-quarkus.update-extension-doc-page.skip \
             --fail-at-end \
             test
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: test-framework
       - name: cd tooling && mvn verify
         run: |
           cd tooling
@@ -342,12 +362,22 @@ jobs:
             -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
             --fail-at-end \
             verify
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: tooling
       - name: cd catalog && mvn test
         run: |
           cd catalog
           ../mvnw ${CQ_MAVEN_ARGS} ${BRANCH_OPTIONS} \
             -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
             test
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: catalog
 
   extensions-jvm-tests:
     runs-on: ubuntu-latest
@@ -388,6 +418,11 @@ jobs:
             -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
             --fail-at-end \
             clean test
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: integration-tests-jvm
 
   integration-tests-alternative-jdk:
     name: Integration Tests Alternative JDK 21 ${{matrix.name}}
@@ -435,6 +470,11 @@ jobs:
             -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
             --fail-at-end \
             clean verify
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: integration-tests
 
   integration-tests-alternative-platform:
     runs-on: ${{ matrix.os }}
@@ -481,6 +521,11 @@ jobs:
             -Dskip-testcontainers-tests -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
             --fail-at-end \
             clean verify
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: integration-tests
 
   examples-tests:
     name: Examples Tests - ${{matrix.name}}
@@ -548,10 +593,13 @@ jobs:
           done
 
           if [[ ${#BUILD_FAILURES[@]} -gt 0 ]]; then
-            echo -e "\nBuild errors were encountred in the following projects:\n"
+            echo -e "\nBuild errors were encountered in the following projects:\n"
             for FAILURE in ${BUILD_FAILURES[@]}; do
                 echo "* ${FAILURE}"
             done
             echo -e "\nCheck build logs for further information."
             exit 1
           fi
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
