--- a/.github/workflows/quarkus-master-cron.yaml
+++ b/.github/workflows/quarkus-master-cron.yaml
@@ -209,6 +209,11 @@ jobs:
               --fail-at-end \
               -pl "${NATIVE_MODULES[*]}"
           fi
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: integration-tests
       - name: Fail if there are uncommitted changes
         shell: bash
         run: |
@@ -259,6 +264,11 @@ jobs:
             -Dformatter.skip -Dimpsort.skip -Denforcer.skip -Dcamel-quarkus.update-extension-doc-page.skip \
             --fail-at-end \
             test
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: extensions-core
       - name: cd extensions && mvn test
         run: |
           cd extensions
@@ -266,6 +276,11 @@ jobs:
             -Dformatter.skip -Dimpsort.skip -Denforcer.skip -Dcamel-quarkus.update-extension-doc-page.skip \
             --fail-at-end \
             test
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: extensions
       - name: cd test-framework && mvn test
         run: |
           cd test-framework
@@ -273,6 +288,11 @@ jobs:
             -Dformatter.skip -Dimpsort.skip -Denforcer.skip -Dcamel-quarkus.update-extension-doc-page.skip \
             --fail-at-end \
             test
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: test-framework
       - name: cd tooling && mvn verify
         run: |
           cd tooling
@@ -280,12 +300,22 @@ jobs:
             -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
             --fail-at-end \
             verify
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: tooling
       - name: cd catalog && mvn test
         run: |
           cd catalog
           ../mvnw ${CQ_MAVEN_ARGS} ${BRANCH_OPTIONS} \
             -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
             test
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: catalog
       - name: Report Build Failure
         if: failure() || cancelled()
         run: |
@@ -336,6 +366,11 @@ jobs:
             -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
             --fail-at-end \
             clean test
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: integration-tests-jvm
       - name: Report Build Failure
         if: failure() || cancelled()
         run: |
@@ -391,6 +426,11 @@ jobs:
             -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
             --fail-at-end \
             clean verify
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: integration-tests
 
   integration-tests-alternative-platform:
     runs-on: ${{ matrix.os }}
@@ -436,6 +476,11 @@ jobs:
             -Dskip-testcontainers-tests -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
             --fail-at-end \
             clean verify
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
+        with:
+          test-report-xml-base-dir: integration-tests
       - name: Report Build Failure
         if: failure() || cancelled()
         shell: bash
@@ -516,13 +561,16 @@ jobs:
           done
 
           if [[ ${#BUILD_FAILURES[@]} -gt 0 ]]; then
-            echo -e "\nBuild errors were encountred in the following projects:\n"
+            echo -e "\nBuild errors were encountered in the following projects:\n"
             for FAILURE in ${BUILD_FAILURES[@]}; do
                 echo "* ${FAILURE}"
             done
             echo -e "\nCheck build logs for further information."
             exit 1
           fi
+      - name: Report test failures
+        uses: ./.github/actions/test-summary-report
+        if: ${{ failure() }}
       - name: Report Build Failure
         if: failure() || cancelled()
         run: |
