Update license-maven-plugin to 4.5

--- a/integration-tests/main-xml-io/pom.xml
+++ b/integration-tests/main-xml-io/pom.xml
@@ -223,6 +223,18 @@
                 </dependency>
             </dependencies>
         </profile>
+        <profile>
+            <id>format</id>
+            <properties>
+                <project.build.sourceEncoding>ISO-8859-15</project.build.sourceEncoding>
+            </properties>
+        </profile>
+        <profile>
+            <id>check-format</id>
+            <properties>
+                <project.build.sourceEncoding>ISO-8859-15</project.build.sourceEncoding>
+            </properties>
+        </profile>
     </profiles>
 
 
