--- a/pom.xml
+++ b/pom.xml
@@ -190,7 +190,7 @@
         <impsort-maven-plugin.version>1.9.0</impsort-maven-plugin.version>
         <jandex-maven-plugin.version>1.2.3</jandex-maven-plugin.version>
         <keytool-maven-plugin.version>1.7</keytool-maven-plugin.version>
-        <license-maven-plugin.version>4.3</license-maven-plugin.version>
+        <license-maven-plugin.version>4.5</license-maven-plugin.version>
         <maven-antrun-plugin.version>3.1.0</maven-antrun-plugin.version>
         <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
         <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
@@ -522,82 +522,86 @@
                     <version>${license-maven-plugin.version}</version>
                     <configuration>
                         <failIfUnknown>true</failIfUnknown>
-                        <header>header.txt</header>
-                        <excludes>
-                            <exclude>**/*.adoc</exclude>
-                            <exclude>camel-quarkus-sbom/*.json</exclude>
-                            <exclude>camel-quarkus-sbom/*.xml</exclude>
-                            <exclude>modules/**/*.yml</exclude>
-                            <exclude>src/main/resources/doc-templates/extensions-camel-bits.yml</exclude>
-                            <exclude>**/*.adm</exclude>
-                            <exclude>**/*.avsc</exclude>
-                            <exclude>**/*.avpr</exclude>
-                            <exclude>**/*.bcfks</exclude>
-                            <exclude>**/*.bin</exclude>
-                            <exclude>**/*.cnf</exclude>
-                            <exclude>**/*.conf</exclude>
-                            <exclude>**/*.csv</exclude>
-                            <exclude>**/*.der</exclude>
-                            <exclude>**/*.ext</exclude>
-                            <exclude>**/*.ftl</exclude>
-                            <exclude>**/*.graphql</exclude>
-                            <exclude>**/*.ics</exclude>
-                            <exclude>**/*.jaas</exclude>
-                            <exclude>**/*.jks</exclude>
-                            <exclude>**/*.jpeg</exclude>
-                            <exclude>**/*.key</exclude>
-                            <exclude>**/*.kts</exclude>
-                            <exclude>**/*.ldif</exclude>
-                            <exclude>**/*.lock</exclude>
-                            <exclude>**/*.log</exclude>
-                            <exclude>**/*.log.*</exclude>
-                            <exclude>**/*.mp3</exclude>
-                            <exclude>**/*.mp4</exclude>
-                            <exclude>**/*.mvel</exclude>
-                            <exclude>**/*.p12</exclude>
-                            <exclude>**/*.pkcs12</exclude>
-                            <exclude>**/*.pem</exclude>
-                            <exclude>**/*.pgp</exclude>
-                            <exclude>**/*.proto</exclude>
-                            <exclude>**/*.spec</exclude>
-                            <exclude>**/*.txt</exclude>
-                            <exclude>**/*.xquery</exclude>
-                            <exclude>**/.factorypath</exclude>
-                            <exclude>**/.pnp.js</exclude>
-                            <exclude>**/.yarnrc.yml</exclude>
-                            <exclude>**/LICENSE.txt</exclude>
-                            <exclude>**/LICENSE</exclude>
-                            <exclude>**/META-INF/persistence*.xsd</exclude>
-                            <exclude>**/NOTICE.txt</exclude>
-                            <exclude>**/NOTICE</exclude>
-                            <exclude>**/README</exclude>
-                            <exclude>**/.yarn/**</exclude>
-                            <exclude>**/cacerts</exclude>
-                            <exclude>**/camel-quarkus-test-list.xml</exclude>
-                            <exclude>**/node_modules/**</exclude>
-                            <exclude>**/pom.xml.versionsBackup</exclude>
-                            <exclude>.mvn/**</exclude>
-                            <exclude>KEYS</exclude>
-                            <exclude>doap.rdf</exclude>
-                            <exclude>ide-config/**</exclude>
-                            <exclude>id_file</exclude>
-                            <exclude>**/mvnw*</exclude>
-                            <exclude>**/*.net</exclude>
-                            <exclude>node/**</exclude>
-                            <exclude>**/resources/routes.1</exclude>
-                            <exclude>**/resources/routes.2</exclude>
-                            <exclude>**/conf.d/**</exclude>
-                            <exclude>**/generated/**</exclude>
-                            <exclude>.envrc</exclude>
-                            <exclude>**/.idea/**</exclude>
-                            <exclude>**/k8s-sb/**</exclude>
-                            <exclude>.gitattributes</exclude>
-                            <exclude>**/src/test/resources/__files/*.xml</exclude>
-                            <exclude>.github/actions/**</exclude>
-                            <exclude>**/my-property</exclude>
-                            <exclude>release-utils/*.sh</exclude>
-                            <exclude>**/*.wasm</exclude>
-                        </excludes>
+                        <licenseSets>
+                            <licenseSet>
+                                <header>header.txt</header>
+                                <excludes>
+                                    <exclude>**/*.adoc</exclude>
+                                    <exclude>camel-quarkus-sbom/*.json</exclude>
+                                    <exclude>camel-quarkus-sbom/*.xml</exclude>
+                                    <exclude>modules/**/*.yml</exclude>
+                                    <exclude>src/main/resources/doc-templates/extensions-camel-bits.yml</exclude>
+                                    <exclude>**/*.adm</exclude>
+                                    <exclude>**/*.avsc</exclude>
+                                    <exclude>**/*.avpr</exclude>
+                                    <exclude>**/*.bcfks</exclude>
+                                    <exclude>**/*.bin</exclude>
+                                    <exclude>**/*.cnf</exclude>
+                                    <exclude>**/*.conf</exclude>
+                                    <exclude>**/*.csv</exclude>
+                                    <exclude>**/*.der</exclude>
+                                    <exclude>**/*.ext</exclude>
+                                    <exclude>**/*.ftl</exclude>
+                                    <exclude>**/*.graphql</exclude>
+                                    <exclude>**/*.ics</exclude>
+                                    <exclude>**/*.jaas</exclude>
+                                    <exclude>**/*.jks</exclude>
+                                    <exclude>**/*.jpeg</exclude>
+                                    <exclude>**/*.key</exclude>
+                                    <exclude>**/*.kts</exclude>
+                                    <exclude>**/*.ldif</exclude>
+                                    <exclude>**/*.lock</exclude>
+                                    <exclude>**/*.log</exclude>
+                                    <exclude>**/*.log.*</exclude>
+                                    <exclude>**/*.mp3</exclude>
+                                    <exclude>**/*.mp4</exclude>
+                                    <exclude>**/*.mvel</exclude>
+                                    <exclude>**/*.p12</exclude>
+                                    <exclude>**/*.pkcs12</exclude>
+                                    <exclude>**/*.pem</exclude>
+                                    <exclude>**/*.pgp</exclude>
+                                    <exclude>**/*.proto</exclude>
+                                    <exclude>**/*.spec</exclude>
+                                    <exclude>**/*.txt</exclude>
+                                    <exclude>**/*.xquery</exclude>
+                                    <exclude>**/.factorypath</exclude>
+                                    <exclude>**/.pnp.js</exclude>
+                                    <exclude>**/.yarnrc.yml</exclude>
+                                    <exclude>**/LICENSE.txt</exclude>
+                                    <exclude>**/LICENSE</exclude>
+                                    <exclude>**/META-INF/persistence*.xsd</exclude>
+                                    <exclude>**/NOTICE.txt</exclude>
+                                    <exclude>**/NOTICE</exclude>
+                                    <exclude>**/README</exclude>
+                                    <exclude>**/.yarn/**</exclude>
+                                    <exclude>**/cacerts</exclude>
+                                    <exclude>**/camel-quarkus-test-list.xml</exclude>
+                                    <exclude>**/node_modules/**</exclude>
+                                    <exclude>**/pom.xml.versionsBackup</exclude>
+                                    <exclude>.mvn/**</exclude>
+                                    <exclude>KEYS</exclude>
+                                    <exclude>doap.rdf</exclude>
+                                    <exclude>ide-config/**</exclude>
+                                    <exclude>id_file</exclude>
+                                    <exclude>**/mvnw*</exclude>
+                                    <exclude>**/*.net</exclude>
+                                    <exclude>node/**</exclude>
+                                    <exclude>**/resources/routes.1</exclude>
+                                    <exclude>**/resources/routes.2</exclude>
+                                    <exclude>**/conf.d/**</exclude>
+                                    <exclude>**/generated/**</exclude>
+                                    <exclude>.envrc</exclude>
+                                    <exclude>**/.idea/**</exclude>
+                                    <exclude>**/k8s-sb/**</exclude>
+                                    <exclude>.gitattributes</exclude>
+                                    <exclude>**/src/test/resources/__files/*.xml</exclude>
+                                    <exclude>.github/actions/**</exclude>
+                                    <exclude>**/my-property</exclude>
+                                    <exclude>release-utils/*.sh</exclude>
+                                    <exclude>**/*.wasm</exclude>
+                                </excludes>
+                            </licenseSet>
+                        </licenseSets>
                         <mapping>
                             <cli>CAMEL_PROPERTIES_STYLE</cli>
                             <ds>SLASHSTAR_STYLE</ds>
