Add test report object debugging to test-summary-report action

--- a/.github/actions/test-summary-report/action.yaml
+++ b/.github/actions/test-summary-report/action.yaml
@@ -85,6 +85,8 @@ runs:
                     }
                     log(`Pushing summary detail to summaryData array`);
                     summaryData.push([className, testName, message, details]);
+                  } else {
+                    log(testCase);
                   }
                 });
               }
