Split MicroProfile integration tests into separate modules
Fixes #6037

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -168,7 +168,8 @@
         <module>master-openshift</module>
         <module>messaging</module>
         <module>micrometer</module>
-        <module>microprofile</module>
+        <module>microprofile-fault-tolerance</module>
+        <module>microprofile-health</module>
         <module>minio</module>
         <module>mllp</module>
         <module>mongodb-grouped</module>
