--- a/integration-tests/opentelemetry/src/main/resources/application.properties
+++ b/integration-tests/opentelemetry/src/main/resources/application.properties
@@ -22,5 +22,4 @@
 quarkus.camel.opentelemetry.exclude-patterns = timer:filtered*
 quarkus.otel.bsp.schedule.delay=1
 quarkus.otel.bsp.export.timeout=5s
-quarkus.datasource."postgres".db-kind=postgresql
-quarkus.datasource."postgres".jdbc.telemetry=true
+quarkus.datasource.jdbc.telemetry=true
