--- a/integration-tests/rest-openapi/src/main/resources/application.properties
+++ b/integration-tests/rest-openapi/src/main/resources/application.properties
@@ -14,4 +14,8 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
-quarkus.native.resources.includes=openapi.json
+quarkus.native.resources.includes=openapi.json,petstore.json
+quarkus.camel.openapi.codegen.model-package=org.apache.camel.quarkus.component.rest.openapi.it.model
+quarkus.camel.openapi.codegen.not-null-jackson=true
+camel.rest.bindingMode=json
+camel.rest.bindingPackageScan=${quarkus.camel.openapi.codegen.model-package}
