--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -7043,12 +7043,13 @@
             </dependency>
             <dependency>
                 <groupId>org.jolokia</groupId>
-                <artifactId>jolokia-jvm</artifactId>
+                <artifactId>jolokia-agent-jvm</artifactId>
                 <version>${jolokia.version}</version>
+                <classifier>javaagent</classifier>
                 <exclusions>
                     <exclusion>
                         <groupId>org.jolokia</groupId>
-                        <artifactId>jolokia-core</artifactId>
+                        <artifactId>jolokia-server-core</artifactId>
                     </exclusion>
                     <exclusion>
                         <groupId>com.googlecode.json-simple</groupId>
