Add me.escoffier.certs:certificate-generator-junit5 to dependabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -37,6 +37,7 @@ updates:
       # Test dependencies
       - dependency-name: "com.github.tomakehurst:wiremock"
       - dependency-name: "com.unboundid:unboundid-ldapsdk"
+      - dependency-name: "me.escoffier.certs:certificate-generator-junit5"
       - dependency-name: "org.hamcrest:hamcrest"
       - dependency-name: "org.hamcrest:hamcrest-core"
       - dependency-name: "org.seleniumhq.selenium:htmlunit-driver"
