--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -30,6 +30,7 @@ updates:
       # Quarkiverse extensions
       - dependency-name: "io.quarkiverse.*:*"
       # Other third party extensions
+      - dependency-name: "com.azure:azure-core-http-vertx"
       - dependency-name: "com.hazelcast:quarkus-hazelcast-client-bom"
       - dependency-name: "com.squareup.okhttp3:okhttp"
       - dependency-name: "org.amqphub.quarkus:quarkus-qpid-jms-bom"
